--- a/src/components/pages/Account.css
+++ b/src/components/pages/Account.css
@@ -7,26 +7,33 @@ div {
   display: flex;
   min-height: calc(100vh - 10rem);
   justify-content: center;
+  align-items: center;
 }
 
 .login {
   display: flex;
   justify-content: center;
-  width: 70%;
   max-width: 420px;
   height: 80%;
   max-height: 550px;
-  background-color: ghostwhite;
+  background-color: transparent;
+  box-shadow: 10px 10px 20px rgba(1, 21, 12, 0.2);
+}
+
+.login input {
+  width: 100%;
+  height: 30px;
+  border-radius: 5px;
 }
 
 form {
-  width: 70%;
-  max-width: 250px;
+  width: 60%;
   padding: 35px;
 }
 
 form h2 {
   text-align: center;
+  margin-top: 0;
   margin-bottom: 50px;
 }
 
