--- a/src/components/utils/Modals/NavbarModal.css
+++ b/src/components/utils/Modals/NavbarModal.css
@@ -1,26 +1,89 @@
 .navbar-modal-bg {
   position: fixed;
-  top: 60px;
+  top: 64px;
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.5);
   z-index: 5;
+  opacity: 0;
 }
 
 .navbar-modal-container {
   position: fixed;
-  background-color: white;
   width: 100%;
   z-index: 10;
+  background-color: white;
 }
 
 .navbar-modal-container li {
   list-style-type: square;
   font-size: 12px;
   padding: 15px;
+  padding-left: 17px;
+  padding-bottom: 20px;
   font-weight: bold;
 }
 
 .navbar-modal-container li:nth-child(4) {
-  padding-bottom: 30px;
+  padding-bottom: 35px;
+}
+
+.animated-bg {
+  animation: show-modal-bg 0.3s forwards linear;
+}
+
+.animated-bg-hide {
+  animation: hide-modal-bg 0.3s forwards linear;
+}
+
+.animated {
+  animation: show-modal 0.3s forwards linear;
+}
+
+.animated-hide {
+  animation: hide-modal 0.2s forwards linear;
+}
+
+@keyframes show-modal-bg {
+  from {
+    opacity: 0;
+  }
+
+  to {
+    opacity: 1;
+  }
+}
+
+@keyframes hide-modal-bg {
+  from {
+    opacity: 1;
+  }
+
+  to {
+    opacity: 0;
+  }
+}
+
+@keyframes show-modal {
+  from {
+    opacity: 0;
+    transform: translateY(-30%);
+  }
+
+  to {
+    opacity: 1;
+    transform: translateY(0%);
+  }
+}
+
+@keyframes hide-modal {
+  from {
+    opacity: 1;
+    transform: translateY(0%);
+  }
+
+  to {
+    opacity: 0;
+    transform: translateY(-10%);
+  }
 }
