--- a/src/components/pages/Home.css
+++ b/src/components/pages/Home.css
@@ -194,6 +194,7 @@
   /* padding: 30px; */
   padding-left: 60px;
   padding-right: 60px;
+  padding-top: 20px;
   /* padding-top: 80px; */
   background-color: white;
   flex-direction: column;
@@ -243,7 +244,7 @@
 
   .home-card-flexbox-detail-hover:not(:hover) {
     opacity: 0;
-    transition: all 0.4s linear;
+    transition: all 0.3s linear;
     box-shadow: none;
   }
 }
