--- a/src/components/pages/Account.css
+++ b/src/components/pages/Account.css
@@ -111,6 +111,21 @@ div {
   transition: all 0.15s linear;
 }
 
+@media screen and (min-width: 768px) and (max-width: 1280px) {
+  .login {
+    width: 90%;
+  }
+
+  .login-logo {
+    width: 60%;
+    background-size: 100%;
+  }
+
+  .login-form {
+    width: 40%;
+  }
+}
+
 @media screen and (max-width: 767px) {
   .login {
     width: 100%;
@@ -137,7 +152,7 @@ div {
   }
 
   .login-form button {
-    width: 25%;
+    width: 36%;
     font-size: 11px;
     border-radius: 5px;
   }
