register page and forgot-password page updated

--- a/src/components/utils/Account/ForgotPassword.css
+++ b/src/components/utils/Account/ForgotPassword.css
@@ -1,3 +1,166 @@
 .forgot-password-container {
+  justify-content: flex-start;
+  align-items: center;
+  flex-direction: column;
   min-height: calc(100vh - 10rem);
+}
+
+.forgot-password-introduction {
+  max-width: 600px;
+  margin-bottom: 30px;
+}
+
+.forgot-password-introduction p {
+  color: grey;
+  font-weight: 500;
+}
+
+.forgot-password-form {
+  width: 30%;
+  max-width: 500px;
+  box-shadow: 10px 10px 20px rgba(35, 35, 186, 0.2);
+  margin-bottom: 40px;
+}
+
+.forgot-password-form-title {
+  text-align: center;
+  padding: 20px;
+}
+
+.forgot-password-form-title h4 {
+  letter-spacing: 2px;
+  color: grey;
+  margin-bottom: 10px;
+}
+
+.forgot-password-form-title h2 {
+  font-weight: 400;
+  letter-spacing: 3px;
+}
+
+.forgot-password-form form {
+  width: 50%;
+  padding-left: 23px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.forgot-password-form form input {
+  width: 85%;
+  height: 30px;
+  border: transparent 2px solid;
+  border-bottom: grey 2px solid;
+  margin-bottom: 40px;
+  font-size: 14px;
+}
+
+.forgot-password-form form input:focus {
+  border: orange 2px solid;
+  border-bottom: orange 2px solid;
+  border-radius: 5px;
+  transition: 0.1s all linear;
+  outline: none;
+}
+
+.forgot-password-form form input:not(:focus) {
+  border: transparent 2px solid;
+  border-bottom: grey 2px solid;
+  transition: 0.1s all linear;
+}
+
+.forgot-password-button-container {
+  width: 88%;
+  margin-bottom: 50px;
+}
+
+.forgot-password-button-container .forgot-password-button-flexbox:nth-child(1) {
+  width: 50%;
+  justify-content: flex-start;
+}
+
+.forgot-password-button-container .forgot-password-button-flexbox:nth-child(2) {
+  width: 50%;
+  justify-content: flex-end;
+}
+
+.forgot-password-button-container button {
+  width: 80px;
+  height: 40px;
+  border: none;
+  font-size: 12px;
+  background-color: black;
+  color: white;
+  font-weight: bold;
+  cursor: pointer;
+  border-radius: 5px;
+}
+
+.forgot-password-button-flexbox button:hover {
+  color: red;
+  transition: 0.2s all linear;
+}
+
+.forgot-password-button-flexbox button:not(:hover) {
+  color: white;
+  transition: 0.2s all linear;
+}
+
+/* .register-form form label {
+    font-weight: 500;
+    color: #3e2723;
+    margin: 0;
+    font-size: 14px;
+    opacity: 0;
+    background-color: red;
+  } */
+
+@media screen and (max-width: 767px) {
+  .forgot-password-container {
+    align-items: center;
+  }
+
+  .forgot-password-introduction {
+    width: 70%;
+    margin-bottom: 0px;
+  }
+
+  .forgot-password-introduction p {
+    color: grey;
+    font-weight: 500;
+    font-size: 13px;
+    line-height: 30px;
+  }
+
+  .forgot-password-form {
+    width: 90%;
+    margin-bottom: 0px;
+  }
+
+  .forgot-password-form-title h4 {
+    font-size: 12px;
+  }
+
+  .forgot-password-form-title h2 {
+    font-size: 18px;
+  }
+
+  .forgot-password-form form {
+    width: 62%;
+  }
+
+  .forgot-password-form form input {
+    font-size: 13px;
+  }
+
+  .forgot-password-button-container button {
+    width: 70px;
+    height: 40px;
+    border: none;
+    font-size: 10px;
+    background-color: black;
+    color: white;
+    font-weight: bold;
+    cursor: pointer;
+    border-radius: 5px;
+  }
 }
