--- a/src/index.css
+++ b/src/index.css
@@ -1,21 +1,24 @@
-@import url("https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,300;0,400;0,700;1,400;1,700&display=swap");
+/* @import url("https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,300;0,400;0,700;1,400;1,700&display=swap");
+ */
+
+@import url("https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@300;400;500;600;700&display=swap");
 
 body {
   margin: 0;
-  font-family: "Lato", sans-serif;
+  font-family: "Roboto Slab", serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: "Lato", sans-serif;
+  font-family: "Roboto Slab", serif;
 }
 
 div {
   box-sizing: border-box;
 }
 
-/* p,
+p,
 h6,
 h5,
 h4,
@@ -25,4 +28,4 @@ h1,
 span,
 li {
   transform: rotate(0.04deg);
-} */
+}
