register page and forgot-password page modified for tablet view

--- a/src/components/utils/Account/ForgotPassword.css
+++ b/src/components/utils/Account/ForgotPassword.css
@@ -114,6 +114,29 @@
     background-color: red;
   } */
 
+@media screen and (min-width: 768px) and (max-width: 1280px) {
+  .forgot-password-container {
+    align-items: center;
+  }
+
+  .forgot-password-introduction {
+    width: 100%;
+    margin-top: 30px;
+    margin-bottom: 30px;
+    text-align: center;
+  }
+
+  .forgot-password-introduction p {
+    font-weight: 500;
+    font-size: 15px;
+  }
+
+  .forgot-password-form {
+    width: 90%;
+    margin-bottom: 0px;
+  }
+}
+
 @media screen and (max-width: 767px) {
   .forgot-password-container {
     align-items: center;
