--- a/src/components/utils/Account/Register.css
+++ b/src/components/utils/Account/Register.css
@@ -114,6 +114,29 @@
   background-color: red;
 } */
 
+@media screen and (min-width: 768px) and (max-width: 1280px) {
+  .register-container {
+    align-items: center;
+  }
+
+  .register-introduction {
+    width: 100%;
+    margin-top: 30px;
+    margin-bottom: 30px;
+    text-align: center;
+  }
+
+  .register-introduction p {
+    font-weight: 500;
+    font-size: 15px;
+  }
+
+  .register-form {
+    width: 90%;
+    margin-bottom: 0px;
+  }
+}
+
 @media screen and (max-width: 767px) {
   .register-container {
     align-items: center;
