--- a/src/components/utils/Account/ForgotPassword.css
+++ b/src/components/utils/Account/ForgotPassword.css
@@ -45,6 +45,25 @@
   margin-right: auto;
 }
 
+.forgot-password-input-container {
+  position: relative;
+}
+
+.forgot-password-input-container label {
+  position: absolute;
+  font-size: 10px;
+  color: orange;
+  left: 0;
+  bottom: 80px;
+  opacity: 0;
+  font-weight: 500;
+}
+
+.forgot-password-input-container input:focus + label {
+  opacity: 1;
+  transition: 0.5s all;
+}
+
 .forgot-password-form form input {
   width: 85%;
   height: 30px;
