--- a/src/components/pages/Home.css
+++ b/src/components/pages/Home.css
@@ -259,7 +259,7 @@
   height: 400px;
   background-color: white;
   box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
-  border-radius: 10px;
+  border-radius: 5px;
   display: none;
 }
 
@@ -267,8 +267,8 @@
   padding: 15px;
   background-color: #007bff;
   color: white;
-  border-top-left-radius: 10px;
-  border-top-right-radius: 10px;
+  border-top-left-radius: 5px;
+  border-top-right-radius: 5px;
 }
 
 .chat-header h4 {
@@ -288,7 +288,7 @@
 
 .chat-input {
   flex: 1;
-  width: 192px;
+  width: 206px;
   padding: 10px 15px;
   border: none;
   border-radius: 5px 0 0 5px;
@@ -298,12 +298,12 @@
 }
 
 .chat-send-button {
-  padding: 10px 20px;
+  padding: 10px 15px;
   border: none;
   border-radius: 0 5px 5px 0;
   background-color: #007bff;
   color: white;
-  font-size: 16px;
+  font-size: 14px;
   cursor: pointer;
   transition: background-color 0.3s;
 }
@@ -318,7 +318,7 @@
   overflow-y: auto;
   display: flex;
   flex-direction: column-reverse;
-  max-height: 300px;
+  max-height: 345px;
 }
 
 .chat-message {
@@ -333,12 +333,16 @@
   background-color: #007bff;
   color: white;
   align-self: flex-end;
+  font-size: 14px;
+  line-height: 20px;
   border-bottom-right-radius: 0;
 }
 
 .server {
   background-color: #f1f1f1;
   align-self: flex-start;
+  font-size: 14px;
+  line-height: 20px;
   border-bottom-left-radius: 0;
 }
 
