forgot-password page updated, and each modal's design slightly changed

--- a/src/components/pages/Home.css
+++ b/src/components/pages/Home.css
@@ -276,34 +276,32 @@
 }
 
 .chat-input-section {
-  position: fixed;
-  width: 300px;
-  bottom: 72px;
-  right: 20px;
+  position: absolute;
+  bottom: 0;
+  width: 100%;
   display: flex;
+  justify-content: center;
   align-items: center;
-  flex-shrink: 0;
-  display: none;
+  flex-wrap: nowrap;
 }
 
 .chat-input {
-  flex: 1;
-  width: 206px;
+  width: 80%;
+  box-sizing: border-box;
   padding: 10px 15px;
   border: none;
-  border-radius: 5px 0 0 5px;
   outline: none;
-  font-size: 16px;
+  font-size: 14px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
 .chat-send-button {
-  padding: 10px 15px;
+  width: 20%;
+  padding: 12.5px 15px;
   border: none;
-  border-radius: 0 5px 5px 0;
   background-color: #007bff;
   color: white;
-  font-size: 14px;
+  font-size: 12px;
   cursor: pointer;
   transition: background-color 0.3s;
 }
@@ -318,7 +316,7 @@
   overflow-y: auto;
   display: flex;
   flex-direction: column-reverse;
-  max-height: 345px;
+  max-height: 310px;
 }
 
 .chat-message {
