--- a/src/components/pages/Cart.css
+++ b/src/components/pages/Cart.css
@@ -1,7 +1,12 @@
 .cart-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   min-height: calc(100vh - 10rem);
 }
 
-.cart-title {
-  text-align: center;
+@media screen and (max-width: 767px) {
+  .cart-container h1 {
+    font-size: 15px;
+  }
 }
