--- a/src/components/utils/Account/ForgotPassword.css
+++ b/src/components/utils/Account/ForgotPassword.css
@@ -66,7 +66,9 @@
 
 .forgot-password-form form input {
   width: 85%;
-  height: 30px;
+  height: 40px;
+  box-sizing: border-box;
+  padding: 5px;
   border: transparent 2px solid;
   border-bottom: grey 2px solid;
   margin-bottom: 40px;
@@ -87,8 +89,22 @@
   transition: 0.1s all linear;
 }
 
+.forgot-passoword-email-notmatch {
+  display: flex;
+  width: 85%;
+  justify-content: center;
+  align-items: center;
+  margin-top: -15px;
+  margin-bottom: 30px;
+}
+
+.forgot-passoword-email-notmatch p {
+  color: red;
+  font-size: 14.5px;
+}
+
 .forgot-password-button-container {
-  width: 88%;
+  width: 85%;
   margin-bottom: 50px;
 }
 
@@ -123,15 +139,6 @@
   color: white;
   transition: 0.2s all linear;
 }
-
-/* .register-form form label {
-    font-weight: 500;
-    color: #3e2723;
-    margin: 0;
-    font-size: 14px;
-    opacity: 0;
-    background-color: red;
-  } */
 
 @media screen and (min-width: 768px) and (max-width: 1280px) {
   .forgot-password-container {
@@ -194,15 +201,22 @@
     font-size: 13px;
   }
 
+  .forgot-passoword-email-notmatch {
+    display: flex;
+    width: 85%;
+    font-size: 13px;
+    justify-content: center;
+    align-items: center;
+    margin-top: -15px;
+    margin-bottom: 30px;
+  }
+
+  .forgot-passoword-email-notmatch p {
+    color: red;
+  }
+
   .forgot-password-button-container button {
     width: 70px;
-    height: 40px;
-    border: none;
     font-size: 10px;
-    background-color: black;
-    color: white;
-    font-weight: bold;
-    cursor: pointer;
-    border-radius: 5px;
   }
 }
