--- a/src/components/utils/Modals/Account-modals/RegisterModal.css
+++ b/src/components/utils/Modals/Account-modals/RegisterModal.css
@@ -19,8 +19,11 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  width: 28%;
-  max-width: 450px;
+  width: auto;
+  /* max-width: 450px; */
+  padding-left: 55px;
+  padding-right: 55px;
+  /* padding: 40px; */
   height: 50%;
   max-height: 550px;
   border-radius: 5px;
@@ -56,6 +59,13 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+}
+
+.register-modal-text-container p {
+  /* background-color: red; */
+  text-align: center;
+  line-height: 30px;
+  width: 100%;
 }
 
 .register-modal-text-container p:nth-child(2) {
@@ -111,7 +121,7 @@
 
 @media screen and (max-width: 767px) {
   .register-modal-container {
-    width: 80%;
+    width: 85%;
     max-width: none;
     height: 50%;
     max-height: none;
@@ -128,6 +138,10 @@
 
   .register-modal-text-container p {
     font-size: 13px;
+    width: 100%;
+    line-height: 20px;
+    text-align: center;
+    /* background-color: red; */
   }
 
   .register-modal-warning {
