--- a/src/components/utils/Account/ForgotPassword.css
+++ b/src/components/utils/Account/ForgotPassword.css
@@ -109,35 +109,26 @@
 }
 
 .forgot-password-button-container .forgot-password-button-flexbox:nth-child(1) {
-  width: 50%;
-  justify-content: flex-start;
-}
-
-.forgot-password-button-container .forgot-password-button-flexbox:nth-child(2) {
-  width: 50%;
-  justify-content: flex-end;
+  width: 100%;
+  justify-content: center;
 }
 
 .forgot-password-button-container button {
-  width: 80px;
-  height: 40px;
+  width: 40%;
+  height: 45px;
   border: none;
-  font-size: 12px;
-  background-color: black;
+  font-size: 11px;
+  background-color: #212121;
   color: white;
   font-weight: bold;
   cursor: pointer;
   border-radius: 5px;
+  letter-spacing: 2px;
+  transition: 0.2s color linear;
 }
 
 .forgot-password-button-flexbox button:hover {
   color: red;
-  transition: 0.2s all linear;
-}
-
-.forgot-password-button-flexbox button:not(:hover) {
-  color: white;
-  transition: 0.2s all linear;
 }
 
 @media screen and (min-width: 768px) and (max-width: 1280px) {
@@ -216,7 +207,7 @@
   }
 
   .forgot-password-button-container button {
-    width: 70px;
     font-size: 10px;
+    height: 40px;
   }
 }
