--- a/src/components/utils/Account/Register.css
+++ b/src/components/utils/Account/Register.css
@@ -66,7 +66,7 @@
 
 .register-form form input {
   width: 85%;
-  height: 30px;
+  height: 40px;
   border: transparent 2px solid;
   border-bottom: grey 2px solid;
   margin-bottom: 40px;
@@ -93,45 +93,27 @@
 }
 
 .register-button-container .register-button-flexbox:nth-child(1) {
-  width: 50%;
-  justify-content: flex-start;
-}
-
-.register-button-container .register-button-flexbox:nth-child(2) {
-  width: 50%;
-  justify-content: flex-end;
+  width: 100%;
+  justify-content: center;
 }
 
 .register-button-container button {
-  width: 80px;
-  height: 40px;
+  width: 50%;
+  height: 45px;
   border: none;
-  font-size: 12px;
-  background-color: black;
+  font-size: 11px;
+  letter-spacing: 2px;
+  background-color: #212121;
   color: white;
   font-weight: bold;
   cursor: pointer;
   border-radius: 5px;
+  transition: 0.2s color linear;
 }
 
 .register-button-flexbox button:hover {
   color: red;
-  transition: 0.2s all linear;
 }
-
-.register-button-flexbox button:not(:hover) {
-  color: white;
-  transition: 0.2s all linear;
-}
-
-/* .register-form form label {
-  font-weight: 500;
-  color: #3e2723;
-  margin: 0;
-  font-size: 14px;
-  opacity: 0;
-  background-color: red;
-} */
 
 @media screen and (min-width: 768px) and (max-width: 1280px) {
   .register-container {
@@ -195,14 +177,7 @@
   }
 
   .register-button-container button {
-    width: 70px;
     height: 40px;
-    border: none;
     font-size: 10px;
-    background-color: black;
-    color: white;
-    font-weight: bold;
-    cursor: pointer;
-    border-radius: 5px;
   }
 }
