--- a/src/components/utils/Helpers/EmailVerification.css
+++ b/src/components/utils/Helpers/EmailVerification.css
@@ -3,6 +3,7 @@
   justify-content: center;
   align-items: center;
   min-height: calc(100vh - 10rem);
+  background-color: rgba(0, 0, 0, 0.01);
 }
 
 @media screen and (max-width: 767px) {
