--- a/src/components/pages/Account.css
+++ b/src/components/pages/Account.css
@@ -70,16 +70,11 @@ div {
   background-color: black;
   font-weight: bold;
   border-radius: 5px;
+  transition: opacity 0.4s;
 }
 
 .login-form button:hover {
-  color: red;
-  transition: all 0.15s linear;
-}
-
-.login-form button:not(:hover) {
-  color: white;
-  transition: all 0.15s linear;
+  opacity: 0.3;
 }
 
 .line {
@@ -156,7 +151,7 @@ div {
   }
 
   .login-form button {
-    width: 30%;
+    width: 50%;
     font-size: 11px;
     height: 45px;
     border-radius: 5px;
@@ -175,59 +170,3 @@ div {
     font-size: 14px;
   }
 }
-
-/* .login {
-  display: flex;
-  justify-content: center;
-  max-width: 420px;
-  height: 80%;
-  max-height: 550px;
-  background-color: transparent;
-  box-shadow: 10px 10px 20px rgba(1, 21, 12, 0.2);
-}
-
-.login input {
-  width: 100%;
-  height: 30px;
-  border-radius: 5px;
-}
-
-form {
-  width: 60%;
-  padding: 35px;
-}
-
-form h2 {
-  text-align: center;
-  margin-top: 0;
-  margin-bottom: 50px;
-}
-
-form button {
-  color: white;
-  width: 100px;
-  height: 50px;
-  border: none;
-  background-color: black;
-}
-
-form button:hover {
-  opacity: 0.5;
-}
-
-.line {
-  width: 100%;
-  padding-top: 10px;
-  border-top: 2px solid grey;
-  text-align: center;
-}
-
-.underline {
-  text-decoration: underline;
-  color: navy;
-  cursor: pointer;
-}
-
-.underline:hover {
-  color: red;
-} */
