--- a/src/components/utils/Account/ForgotPassword.css
+++ b/src/components/utils/Account/ForgotPassword.css
@@ -73,20 +73,15 @@
   border-bottom: grey 2px solid;
   margin-bottom: 40px;
   font-size: 14px;
+  transition: 0.2s border linear, 0.2s border-bottom linear, 0.2s outline linear,
+    0.2s border-radius linear;
 }
 
 .forgot-password-form form input:focus {
   border: orange 2px solid;
   border-bottom: orange 2px solid;
   border-radius: 5px;
-  transition: 0.1s all linear;
   outline: none;
-}
-
-.forgot-password-form form input:not(:focus) {
-  border: transparent 2px solid;
-  border-bottom: grey 2px solid;
-  transition: 0.1s all linear;
 }
 
 .forgot-passoword-email-notmatch {
@@ -114,7 +109,7 @@
 }
 
 .forgot-password-button-container button {
-  width: 40%;
+  width: 100%;
   height: 45px;
   border: none;
   font-size: 11px;
@@ -124,11 +119,11 @@
   cursor: pointer;
   border-radius: 5px;
   letter-spacing: 2px;
-  transition: 0.2s color linear;
+  transition: 0.2s opacity;
 }
 
 .forgot-password-button-flexbox button:hover {
-  color: red;
+  opacity: 0.4;
 }
 
 @media screen and (min-width: 768px) and (max-width: 1280px) {
