--- a/src/components/utils/Account/Register.css
+++ b/src/components/utils/Account/Register.css
@@ -71,20 +71,15 @@
   border-bottom: grey 2px solid;
   margin-bottom: 40px;
   font-size: 14px;
+  transition: 0.2s border linear, 0.2s border-bottom linear, 0.2s outline linear,
+    0.2s border-radius linear;
 }
 
 .register-form form input:focus {
   border: orange 2px solid;
   border-bottom: orange 2px solid;
   border-radius: 5px;
-  transition: 0.1s all linear;
   outline: none;
-}
-
-.register-form form input:not(:focus) {
-  border: transparent 2px solid;
-  border-bottom: grey 2px solid;
-  transition: 0.1s all linear;
 }
 
 .register-button-container {
@@ -98,7 +93,7 @@
 }
 
 .register-button-container button {
-  width: 50%;
+  width: 100%;
   height: 45px;
   border: none;
   font-size: 11px;
@@ -108,11 +103,11 @@
   font-weight: bold;
   cursor: pointer;
   border-radius: 5px;
-  transition: 0.2s color linear;
+  transition: 0.2s opacity;
 }
 
 .register-button-flexbox button:hover {
-  color: red;
+  opacity: 0.4;
 }
 
 @media screen and (min-width: 768px) and (max-width: 1280px) {
